2001-08-20  Pascal Obry  <obry@gnat.com>

        * xe_utils.adb:
       (Dir_Sep): renaming for GNAT.OS_Lib.Directory_Separator. 
       Use Dir_Sep instead of Directory_Separator to avoid ambiguity.
       Continued work for 8928-003.

2001-07-11  Laurent Pautet  <pautet@arlequin.enst.fr>

	* xe_stubs.adb: Split storage_dir string into substrings to fix
	9109-011.

	* xe_utils.adb, xe_utils.adb: Split strings into substrings to
	compile with -gnatg.

2001-06-05  Pascal Obry  <obry@gnat.com>

	* xe_reg.adb: Check for GCC_ROOT environment variable before
	looking in the registry. Fix 9004-005.
	
2001-05-30  Laurent Pautet  <pautet@arlequin.enst.fr>

	* xe.ads, xe.adb, xe_stubs.adb, xe_back.adb, xe_back.ads,
	xe_stdcnf.adb: Add pragma Priority_Policy to choose between
	CLient_Propagated and Server_Decalred priority policy. Add
	partition attribute priority to set anonymous tasks priority.

	* all: Update copyright.
	
2001-02-08  Laurent Pautet  <pautet@arlequin.enst.fr>

	* xe.ads, xe_back.adb, xe_back.ads, xe_lead.adb, xe_stubs.adb: Add
	pragma Remote_Shell to configure the remote shell command and
	options to use when we launch a remote partition. Fix 8607-013.

2001-01-26  Laurent Pautet  <pautet@arlequin.enst.fr>

	* xe_lead.adb: Do not embrace executable name with quotes. It
	does not help on NT and it fails on SGI.

	* xe_stubs.adb: Use remote shell command and options from
	platform_specific instead of those from xe_defs. Fix differences
	between platforms in regression test.

2001-01-24  Laurent Pautet  <pautet@arlequin.enst.fr>

	* xe_stubs.adb: Move partition launching code from partition.adb
	to s-garela.adb in order to execute system() before activating any
	garlic tasks.

	* Makefile.in: Updated.

2001-01-19  Laurent Pautet  <pautet@arlequin.enst.fr>

	* xe_check.adb: in (Recompile), when we decide to discard a
	compilation error because the unit is not needed to build the
	partition, check that the unit name extracted by